# shadow

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PRIVACY.md  ROADMAP.md
examples/: demo.py
shadow/: __init__.py  __main__.py  config.py
shadow/adapters/: __init__.py  base.py  gmail.py  linear.py  notion.py  slack.py
shadow/agents/: __init__.py  library.py  marketplace.py
shadow/capture/: __init__.py  base.py  generic.py  linux.py  macos.py  windows.py
shadow/dashboard/: __init__.py  server.py
shadow/dashboard/templates/: index.html
shadow/intent/: __init__.py  base.py  claude_extractor.py  local_extractor.py  ollama_extractor.py  openai_extractor.py  openclaw_extractor.py
shadow/patterns/: __init__.py  detector.py
shadow/privacy/: __init__.py  redactor.py
shadow/runtime/: __init__.py  executor.py
shadow/scheduler/: __init__.py  engine.py
shadow/storage/: __init__.py  db.py
tauri/: .gitignore  README.md  package.json
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/icons/: README.md
tauri/src-tauri/src/: lib.rs  main.rs
tests/: test_executor.py  test_patterns.py  test_storage.py
