[package]
name = "shadow-desktop"
version = "0.1.0"
description = "Tauri desktop wrapper for Shadow agent forge"
authors = ["Shadow contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "^2.0", features = [] }

[dependencies]
tauri = { version = "^2.0", features = ["shell-open", "macos-private-api"] }
tauri-plugin-shell = "^2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
